@@ -353,6 +353,13 @@ bool Helper::directoryContainsDVD(QString directory) {
 	return valid;
 }
 
+QString Helper::stripColorsTags(QString s) {
+    QRegExp rx_console_colors("\033\\[\\d\\d?;\\d\\d?m");
+    int removePos = rx_console_colors.lastIndexIn(s);
+    removePos += rx_console_colors.matchedLength();
+    return s.remove(0, removePos);
+}
+
 /*
 #ifdef Q_OS_WIN
 QString Helper::mplayer_intermediate(QString mplayer_bin) {
